--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ DB_USERNAME=abc
 DB_PASSWORD=qwerty
 GOOGLE_CLIENT_SECRET=qweiuascnabsjaksjca
 GOOGLE_CLIENT_ID=asduhaoiwudljabsldahs
-GOOGLE_REDIRECT_URL=http://localhost:8080
+GOOGLE_API_KEY=salkdjlaskdjlaskjdal
